
Fixes

* for mdpow.workflows.dihedrals.periodic_angle() implement .copy(deep=True)
  to explicitly make a copy DataFrame of the data for angle padding (#242)
* fix rcoulomb in CHARMM energy minimization MDP template file (PR #210)
* fix ensemble.EnsembleAnalysis.check_groups_from_common_ensemble (#212)
* updated versioneer (#285)


2022-01-03    0.8.0
ALescoulie, orbeckst

Changes

* dropped support for Python 2 and <3.6: only Python 3.7--3.9
  are supported (#177)
* removed unused POWConfigParser.getintarray() (PR #187)
* removed deprecated mdpow-gyhd script, use mdpow-solvationenergy
  instead (#183)

Enhancements

* new Ensemble and EnsembleAtomGroup objects for loading set of system
  simulations (issue #168, PR #179)
* new EnsembleAnalysis framework for collecting data from MDPOW simulations 
  (issue #168, PR #179)
* new EnsembleAnalysis: dihedrals (#190, PR #193)    
* new EnsembleAnalysis: solvation shell (#195, PR #196)  
* new exception config.NoSectionError to indicate missing section
  ("protocol") in the YAML run input file (PR #187)
* new config.NoOptionWarning when undefined options are used (with
  default None) and POWConfigParser.get() now logs when an option is used
  at level DEBUG (PR #187)

Fixes

* run.get_mdp_files() finds the full path for an MDP file and raises ValueError
  when MDP file is not found (PR #187)
* POWConfigParser.getpath() returns None for empty options instead of raising
  TypeError (PR #187)
* POWConfigParser.getlist() and getarray() return empty list or array for
  empty options instead of raising TypeError (PR #187)


2021-08-04    0.7.1
orbeckst, iorga

Fixes

* restrict alchemlyb to <0.5.0 for Python 2 (otherwise the installation fails
  due to an unsatisfiable pandas dependency) (#180)
* fix failure of mdpow-solvation script "AttributeError: 'AttributeDict' object
  has no attribute 'Gibbs'" (#180)
* fix fep.p_transfer() only analyzing the second input Gsolv (would lead to an