@@ -68,6 +68,7 @@ Fixes
 * fix rcoulomb in CHARMM energy minimization MDP template file (PR #210)
 * fix ensemble.EnsembleAnalysis.check_groups_from_common_ensemble (#212)
 * updated versioneer (#285)
+* fix that simulation stages cannot be restarted after error (#272)
 
 
 2022-01-03    0.8.0
